<resources>
    <string name="app_name">FirstApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->


    <string name="add3">+3 point</string>
    <string name="add2">+2 point</string>
    <string name="add1">+1 point</string>
    <string name="team_but">Team A</string>
    <string name="score">0</string>
    <string name="reset_but">reset</string>
    <string name="btn_Dollar">Dollar</string>
    <string name="btn_Euro">Euro</string>
    <string name="btn_Mon">Mon</string>
    <string name="btn_money_reset">Reset</string>
    <string name="inputMoney">Please input money </string>
    <string name="ShowMoney">Hello </string>
    <string name="config_btn">CONFIG</string>
    <string name="btn_save">Save</string>
    <string name="Label_open_list">OpenList</string>
    <string name="show_name">Hello</string>
    <string name="keyWords">please input key words</string>
    <string name="search_btn">Search</string>
</resources>
