<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_margin="5sp"
            android:gravity="center"

            android:text="@string/team_but"
            android:textSize="30sp"
            tools:text="@string/team_but" />

        <TextView
            android:id="@+id/score"
            android:layout_width="401dp"
            android:layout_height="81dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/score"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:onClick="butAdd3"
            android:text="@string/add3"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:onClick="butAdd2"
            android:text="@string/add2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:onClick="butAdd1"
            android:text="@string/add1"
            android:textSize="25sp" />

    </LinearLayout>




    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="butreset"
        android:text="@string/reset_but"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />




</androidx.constraintlayout.widget.ConstraintLayout>




